# lib-ml

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
lib-ml/: pre_process.py
src/: pre_process.py
